# letterboxd-list

./: README.md  pyproject.toml
.github/workflows/: update_lists.yml
letterboxd_list/: argparse_env_default.py  cache.py  fetch.py  gist_cache.py  gist_handler.py  letterboxd_parse.py  list_builder.py  movie.py
